fix up image and action alignments

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 .App {
-  background-color: green;
   height: 65vh;
   display: flex;
   flex-direction: column;
@@ -20,6 +19,10 @@
   font-size: x-large;
 }
 
+.content-container {
+  text-align: center;
+}
+
 .url-input {
   border-radius: 0.25rem;
   height: 24px;
@@ -29,6 +32,7 @@
 .img-container {
   height: 350px;
   width: 350px;
+  margin-top: 5%
 }
 
 .url-image {
